<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BeeKey</string>
    <string name="display_name">Display name</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="_84_70_201_1234">(+84)70 201 1234</string>
    <string name="vietnam">Vietnam</string>
    <string name="sign_up_to_become_a_new_bee">Sign up to become a new Bee</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="beekey">BEEKEY</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_address">Home Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="ok">OK</string>
    <string name="change_pass">Change Pass</string>
    <string name="new_password">New Password</string>
    <string name="change_information">Change Information</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="backbutton">BACKBUTTON</string>
    <string name="requesticon">REQUESTICON</string>
    <string name="sorry_for_no_function">Sorry for no function</string>
    <string name="settings">Settings</string>
    <string name="personal_information">Personal information</string>
    <string name="change_password">Change password</string>
    <string name="help_and_support">Help and support</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log Out</string>
    <string name="report">Report</string>
    <string name="write_here">Write here!</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="counter_task">Counter task</string>
    <string name="project_name">Project name</string>
    <string name="counter_offer_price">Counter-offer price</string>
    <string name="reason">Reason</string>
    <string name="project_information">Project information</string>
    <string name="offer">Offer:</string>
    <string name="date">Date</string>
    <string name="deadline">Deadline:</string>
    <string name="dollars">Dollars</string>
    <string name="file_attach">File attach:</string>
    <string name="number">Number</string>
    <string name="number_of_file">Number of file</string>
    <string name="dollar">Dollar</string>
    <string name="my_task">My Task</string>
    <string name="task">TASK</string>
    <string name="accept_offer">Accept Offer:</string>
    <string name="user">User:</string>
    <string name="chat">CHAT</string>
    <string name="cost">Cost:</string>
    <string name="request_pending">REQUEST PENDING</string>
    <string name="request_view_doing">REQUEST VIEW DOING</string>
    <string name="request_doing">REQUEST DOING</string>
    <string name="done">DONE</string>
    <string name="top_up">Top up</string>
    <string name="how_much_money_you_want_to_top_up">How much money you want to top up?</string>
    <string name="amount">Amount</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="my_request">My Request</string>
    <string name="on_going_task">On-going Task</string>
    <string name="feedback">Feedback</string>
    <string name="request">Request</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="yyyy_mm_dd_at_hh_mm_ss">YYYY-MM-DD at hh:mm:ss</string>
    <string name="file_attachment">File Attachment</string>
    <string name="deadline_">Deadline</string>
    <string name="starting_at">Starting at $</string>
    <string name="price">Price</string>
    <string name="coin">Coin</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="change">Change</string>
    <string name="can_you_give_the_lancer_some_feedback">Can you give the lancer some feedback?</string>
    <string name="what_problem_that_you_are_facing_with_our_application_or_user">What problem that you are facing with our application or user?</string>
    <string name="content">Content</string>
    <string name="couter_offer_list">Couter offer list</string>
    <string name="message_content">Message content</string>
    <string name="status">Status</string>
    <string name="client">Client:</string>
    <string name="are_you_sure_to_accept_this_solution">Are you sure to accept this solution!?</string>
    <string name="confirm">Confirm</string>
    <string name="cancle">Cancle</string>
    <string name="view_offer">View offer</string>
    <string name="request_view">Request view</string>
    <string name="lancer">Lancer</string>
    <string-array name="Category">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
</resources>

